rust/macros/tests/ui/fail/string_literal_protocol.stderr
error: string-literal tell input was removed; use the canonical indentation-based token DSL directly
 --> tests/ui/fail/string_literal_protocol.rs:4:7
  |
4 |   tell!(r#"
  |  _______^
5 | | protocol PingPong =
6 | |   roles Alice, Bob
7 | |   Alice -> Bob : Ping
8 | |   Bob -> Alice : Pong
9 | | "#);
  | |__^
